# IOT_Tour

./: .gitignore  Multiplicadores de Empleo Turismo - 2.1.xlsx  Process.py  Process_README.md  README.md  extract_data.py  pyproject.toml
ProcessedData/: Correlativa 68 a 27.xlsx
ProcessedData/2019/: B.csv  Bd.csv  Bm.csv  F.csv  Fd.csv  Fd2.csv  Fi.csv  Ghost.csv  Leon.csv  Vt2019.csv  g.csv
RawData/: 2021_Matriz_Prod_20240129.xlsx  2022_Matriz_Prod_20240201.xlsx  Matriz_Prod_2023.xlsx  Ocupados y TETC para multiplicadores 2021-2024.xlsx  anex-CuentasNalANuales-OfertaUtilizacionPreciosConstantes-2022p.xlsx
