[project]
name = "oci-tour"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "polars (>=1.29.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "fastexcel (>=0.14.0,<0.15.0)"
]

[tool.poetry]
packages = [{include = "oci_tour", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
